--- a/redirect.html
+++ b/redirect.html
@@ -7,7 +7,7 @@
 <body>
 <script type="text/javascript">
 <!--
-var pages = ["rtorrent.RTorrent-c", "rtorrent-m"];
+var pages = ["rtorrent.lib.torrentparser.TorrentParser-c", "rtorrent.lib.torrentparser-m", "rtorrent.torrent.Torrent-c", "rtorrent.tracker.Tracker-c", "rtorrent.rpc.DummyClass-c", "rtorrent.rpc.Multicall-c", "rtorrent.lib.bencode-m", "rtorrent.rpc.Method-c", "rtorrent.file.File-c", "rtorrent.peer.Peer-c", "rtorrent.RTorrent-c", "rtorrent.torrent-m", "rtorrent.tracker-m", "rtorrent.common-m", "rtorrent.file-m", "rtorrent.peer-m", "rtorrent.lib-m", "rtorrent.rpc-m", "rtorrent-m"];
 var dottedName = get_anchor();
 if (dottedName) {
     var target = redirect_url(dottedName);
