--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,16 @@
   <br />
   <h2 class="toc">Modules</h2>
     <a target="moduleFrame" href="toc-rtorrent-module.html"
-     onclick="setFrame('toc-rtorrent-module.html','rtorrent-module.html');"     >rtorrent</a><br /><hr />
+     onclick="setFrame('toc-rtorrent-module.html','rtorrent-module.html');"     >rtorrent</a><br />    <a target="moduleFrame" href="toc-rtorrent.common-module.html"
+     onclick="setFrame('toc-rtorrent.common-module.html','rtorrent.common-module.html');"     >rtorrent.common</a><br />    <a target="moduleFrame" href="toc-rtorrent.file-module.html"
+     onclick="setFrame('toc-rtorrent.file-module.html','rtorrent.file-module.html');"     >rtorrent.file</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib-module.html"
+     onclick="setFrame('toc-rtorrent.lib-module.html','rtorrent.lib-module.html');"     >rtorrent.lib</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib.bencode-module.html"
+     onclick="setFrame('toc-rtorrent.lib.bencode-module.html','rtorrent.lib.bencode-module.html');"     >rtorrent.lib.bencode</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib.torrentparser-module.html"
+     onclick="setFrame('toc-rtorrent.lib.torrentparser-module.html','rtorrent.lib.torrentparser-module.html');"     >rtorrent.lib.torrentparser</a><br />    <a target="moduleFrame" href="toc-rtorrent.peer-module.html"
+     onclick="setFrame('toc-rtorrent.peer-module.html','rtorrent.peer-module.html');"     >rtorrent.peer</a><br />    <a target="moduleFrame" href="toc-rtorrent.rpc-module.html"
+     onclick="setFrame('toc-rtorrent.rpc-module.html','rtorrent.rpc-module.html');"     >rtorrent.rpc</a><br />    <a target="moduleFrame" href="toc-rtorrent.torrent-module.html"
+     onclick="setFrame('toc-rtorrent.torrent-module.html','rtorrent.torrent-module.html');"     >rtorrent.torrent</a><br />    <a target="moduleFrame" href="toc-rtorrent.tracker-module.html"
+     onclick="setFrame('toc-rtorrent.tracker-module.html','rtorrent.tracker-module.html');"     >rtorrent.tracker</a><br /><hr />
   <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
