--- a/toc-everything.html
+++ b/toc-everything.html
@@ -14,28 +14,121 @@
 <hr />
   <h2 class="toc">All Classes</h2>
     <a target="mainFrame" href="rtorrent.RTorrent-class.html"
-     >rtorrent.RTorrent</a><br />  <h2 class="toc">All Functions</h2>
+     >rtorrent.RTorrent</a><br />    <a target="mainFrame" href="rtorrent.file.File-class.html"
+     >rtorrent.file.File</a><br />    <a target="mainFrame" href="rtorrent.lib.torrentparser.TorrentParser-class.html"
+     >rtorrent.lib.torrentparser.TorrentParser</a><br />    <a target="mainFrame" href="rtorrent.peer.Peer-class.html"
+     >rtorrent.peer.Peer</a><br />    <a target="mainFrame" href="rtorrent.rpc.DummyClass-class.html"
+     >rtorrent.rpc.DummyClass</a><br />    <a target="mainFrame" href="rtorrent.rpc.Method-class.html"
+     >rtorrent.rpc.Method</a><br />    <a target="mainFrame" href="rtorrent.rpc.Multicall-class.html"
+     >rtorrent.rpc.Multicall</a><br />    <a target="mainFrame" href="rtorrent.torrent.Torrent-class.html"
+     >rtorrent.torrent.Torrent</a><br />    <a target="mainFrame" href="rtorrent.tracker.Tracker-class.html"
+     >rtorrent.tracker.Tracker</a><br />  <h2 class="toc">All Functions</h2>
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_class_methods"
      >rtorrent._build_class_methods</a><br />  </div>
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_rpc_methods"
      >rtorrent._build_rpc_methods</a><br />  </div>
-  <h2 class="toc">All Variables</h2>
+    <a target="mainFrame" href="rtorrent.common-module.html#bool_to_int"
+     >rtorrent.common.bool_to_int</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#cmd_exists"
+     >rtorrent.common.cmd_exists</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#find_torrent"
+     >rtorrent.common.find_torrent</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#is_valid_port"
+     >rtorrent.common.is_valid_port</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode"
+     >rtorrent.lib.bencode._decode</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode_dict"
+     >rtorrent.lib.bencode._decode_dict</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode_int"
+     >rtorrent.lib.bencode._decode_int</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode_list"
+     >rtorrent.lib.bencode._decode_list</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode_string"
+     >rtorrent.lib.bencode._decode_string</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_encode_dict"
+     >rtorrent.lib.bencode._encode_dict</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_encode_int"
+     >rtorrent.lib.bencode._encode_int</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_encode_list"
+     >rtorrent.lib.bencode._encode_list</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_encode_string"
+     >rtorrent.lib.bencode._encode_string</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_gettype"
+     >rtorrent.lib.bencode._gettype</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#decode"
+     >rtorrent.lib.bencode.decode</a><br />    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#encode"
+     >rtorrent.lib.bencode.encode</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#call_method"
+     >rtorrent.rpc.call_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#find_method"
+     >rtorrent.rpc.find_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#get_varname"
+     >rtorrent.rpc.get_varname</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#process_result"
+     >rtorrent.rpc.process_result</a><br />  <h2 class="toc">All Variables</h2>
     <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION"
      >rtorrent.MIN_RTORRENT_VERSION</a><br />    <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION_STR"
-     >rtorrent.MIN_RTORRENT_VERSION_STR</a><br />    <a target="mainFrame" href="rtorrent-module.html#__loader__"
-     >rtorrent.__loader__</a><br />    <a target="mainFrame" href="rtorrent-module.html#__package__"
+     >rtorrent.MIN_RTORRENT_VERSION_STR</a><br />    <a target="mainFrame" href="rtorrent-module.html#__package__"
      >rtorrent.__package__</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_all_methods_list"
      >rtorrent._all_methods_list</a><br />  </div>
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_py3"
      >rtorrent._py3</a><br />  </div>
-    <a target="mainFrame" href="rtorrent-module.html#l"
-     >rtorrent.l</a><br />    <a target="mainFrame" href="rtorrent-module.html#methods"
+    <a target="mainFrame" href="rtorrent.common-module.html#__package__"
+     >rtorrent.common.__package__</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.common-module.html#_py3"
+     >rtorrent.common._py3</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.file-module.html#__package__"
+     >rtorrent.file.__package__</a><br />    <a target="mainFrame" href="rtorrent.file-module.html#methods"
+     >rtorrent.file.methods</a><br />    <a target="mainFrame" href="rtorrent-module.html#l"
+     >rtorrent.l</a><br />    <a target="mainFrame" href="rtorrent.lib-module.html#__package__"
+     >rtorrent.lib.__package__</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_DICTIONARY"
+     >rtorrent.lib.bencode._TYPE_DICTIONARY</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_END"
+     >rtorrent.lib.bencode._TYPE_END</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_INT"
+     >rtorrent.lib.bencode._TYPE_INT</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_INVALID"
+     >rtorrent.lib.bencode._TYPE_INVALID</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_LIST"
+     >rtorrent.lib.bencode._TYPE_LIST</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_STRING"
+     >rtorrent.lib.bencode._TYPE_STRING</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_VALID_STRING_TYPES"
+     >rtorrent.lib.bencode._VALID_STRING_TYPES</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#__package__"
+     >rtorrent.lib.bencode.__package__</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_py3"
+     >rtorrent.lib.bencode._py3</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.lib.torrentparser-module.html#__package__"
+     >rtorrent.lib.torrentparser.__package__</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.lib.torrentparser-module.html#_py3"
+     >rtorrent.lib.torrentparser._py3</a><br />  </div>
+    <a target="mainFrame" href="rtorrent-module.html#methods"
      >rtorrent.methods</a><br />    <a target="mainFrame" href="rtorrent-module.html#n"
-     >rtorrent.n</a><br /><hr />
+     >rtorrent.n</a><br />    <a target="mainFrame" href="rtorrent.peer-module.html#__package__"
+     >rtorrent.peer.__package__</a><br />    <a target="mainFrame" href="rtorrent.peer-module.html#methods"
+     >rtorrent.peer.methods</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#__package__"
+     >rtorrent.rpc.__package__</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.rpc-module.html#_py3"
+     >rtorrent.rpc._py3</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.torrent-module.html#__package__"
+     >rtorrent.torrent.__package__</a><br />    <a target="mainFrame" href="rtorrent.torrent-module.html#methods"
+     >rtorrent.torrent.methods</a><br />    <a target="mainFrame" href="rtorrent.tracker-module.html#__package__"
+     >rtorrent.tracker.__package__</a><br />    <a target="mainFrame" href="rtorrent.tracker-module.html#methods"
+     >rtorrent.tracker.methods</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
