--- a/toc-rtorrent-module.html
+++ b/toc-rtorrent-module.html
@@ -24,8 +24,7 @@
   <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION"
      >MIN_RTORRENT_VERSION</a><br />    <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION_STR"
-     >MIN_RTORRENT_VERSION_STR</a><br />    <a target="mainFrame" href="rtorrent-module.html#__loader__"
-     >__loader__</a><br />    <a target="mainFrame" href="rtorrent-module.html#__package__"
+     >MIN_RTORRENT_VERSION_STR</a><br />    <a target="mainFrame" href="rtorrent-module.html#__package__"
      >__package__</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_all_methods_list"
      >_all_methods_list</a><br />  </div>
