--- a/toc-everything.html
+++ b/toc-everything.html
@@ -14,7 +14,9 @@
 <hr />
   <h2 class="toc">All Classes</h2>
     <a target="mainFrame" href="rtorrent.RTorrent-class.html"
-     >rtorrent.RTorrent</a><br />    <a target="mainFrame" href="rtorrent.file.File-class.html"
+     >rtorrent.RTorrent</a><br />    <a target="mainFrame" href="rtorrent.err.MethodError-class.html"
+     >rtorrent.err.MethodError</a><br />    <a target="mainFrame" href="rtorrent.err.RTorrentVersionError-class.html"
+     >rtorrent.err.RTorrentVersionError</a><br />    <a target="mainFrame" href="rtorrent.file.File-class.html"
      >rtorrent.file.File</a><br />    <a target="mainFrame" href="rtorrent.lib.torrentparser.TorrentParser-class.html"
      >rtorrent.lib.torrentparser.TorrentParser</a><br />    <a target="mainFrame" href="rtorrent.peer.Peer-class.html"
      >rtorrent.peer.Peer</a><br />    <a target="mainFrame" href="rtorrent.rpc.DummyClass-class.html"
@@ -26,12 +28,10 @@
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_class_methods"
      >rtorrent._build_class_methods</a><br />  </div>
-  <div class="private">
-    <a target="mainFrame" href="rtorrent-module.html#_build_rpc_methods"
-     >rtorrent._build_rpc_methods</a><br />  </div>
     <a target="mainFrame" href="rtorrent.common-module.html#bool_to_int"
      >rtorrent.common.bool_to_int</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#cmd_exists"
-     >rtorrent.common.cmd_exists</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#find_torrent"
+     >rtorrent.common.cmd_exists</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#convert_version_tuple_to_str"
+     >rtorrent.common.convert_version_tuple_to_str</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#find_torrent"
      >rtorrent.common.find_torrent</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#is_valid_port"
      >rtorrent.common.is_valid_port</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_decode"
@@ -65,7 +65,10 @@
      >rtorrent.lib.bencode._gettype</a><br />  </div>
     <a target="mainFrame" href="rtorrent.lib.bencode-module.html#decode"
      >rtorrent.lib.bencode.decode</a><br />    <a target="mainFrame" href="rtorrent.lib.bencode-module.html#encode"
-     >rtorrent.lib.bencode.encode</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#call_method"
+     >rtorrent.lib.bencode.encode</a><br />  <div class="private">
+    <a target="mainFrame" href="rtorrent.rpc-module.html#_build_rpc_methods"
+     >rtorrent.rpc._build_rpc_methods</a><br />  </div>
+    <a target="mainFrame" href="rtorrent.rpc-module.html#call_method"
      >rtorrent.rpc.call_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#find_method"
      >rtorrent.rpc.find_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#get_varname"
      >rtorrent.rpc.get_varname</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#process_result"
@@ -83,10 +86,10 @@
      >rtorrent.common.__package__</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent.common-module.html#_py3"
      >rtorrent.common._py3</a><br />  </div>
-    <a target="mainFrame" href="rtorrent.file-module.html#__package__"
+    <a target="mainFrame" href="rtorrent.err-module.html#__package__"
+     >rtorrent.err.__package__</a><br />    <a target="mainFrame" href="rtorrent.file-module.html#__package__"
      >rtorrent.file.__package__</a><br />    <a target="mainFrame" href="rtorrent.file-module.html#methods"
-     >rtorrent.file.methods</a><br />    <a target="mainFrame" href="rtorrent-module.html#l"
-     >rtorrent.l</a><br />    <a target="mainFrame" href="rtorrent.lib-module.html#__package__"
+     >rtorrent.file.methods</a><br />    <a target="mainFrame" href="rtorrent.lib-module.html#__package__"
      >rtorrent.lib.__package__</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent.lib.bencode-module.html#_TYPE_DICTIONARY"
      >rtorrent.lib.bencode._TYPE_DICTIONARY</a><br />  </div>
@@ -117,8 +120,7 @@
     <a target="mainFrame" href="rtorrent.lib.torrentparser-module.html#_py3"
      >rtorrent.lib.torrentparser._py3</a><br />  </div>
     <a target="mainFrame" href="rtorrent-module.html#methods"
-     >rtorrent.methods</a><br />    <a target="mainFrame" href="rtorrent-module.html#n"
-     >rtorrent.n</a><br />    <a target="mainFrame" href="rtorrent.peer-module.html#__package__"
+     >rtorrent.methods</a><br />    <a target="mainFrame" href="rtorrent.peer-module.html#__package__"
      >rtorrent.peer.__package__</a><br />    <a target="mainFrame" href="rtorrent.peer-module.html#methods"
      >rtorrent.peer.methods</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#__package__"
      >rtorrent.rpc.__package__</a><br />  <div class="private">
