--- a/toc-rtorrent-module.html
+++ b/toc-rtorrent-module.html
@@ -18,9 +18,6 @@
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_class_methods"
      >_build_class_methods</a><br />  </div>
-  <div class="private">
-    <a target="mainFrame" href="rtorrent-module.html#_build_rpc_methods"
-     >_build_rpc_methods</a><br />  </div>
   <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION"
      >MIN_RTORRENT_VERSION</a><br />    <a target="mainFrame" href="rtorrent-module.html#MIN_RTORRENT_VERSION_STR"
@@ -31,10 +28,8 @@
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_py3"
      >_py3</a><br />  </div>
-    <a target="mainFrame" href="rtorrent-module.html#l"
-     >l</a><br />    <a target="mainFrame" href="rtorrent-module.html#methods"
-     >methods</a><br />    <a target="mainFrame" href="rtorrent-module.html#n"
-     >n</a><br /><hr />
+    <a target="mainFrame" href="rtorrent-module.html#methods"
+     >methods</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
