--- a/toc.html
+++ b/toc.html
@@ -17,7 +17,8 @@
   <h2 class="toc">Modules</h2>
     <a target="moduleFrame" href="toc-rtorrent-module.html"
      onclick="setFrame('toc-rtorrent-module.html','rtorrent-module.html');"     >rtorrent</a><br />    <a target="moduleFrame" href="toc-rtorrent.common-module.html"
-     onclick="setFrame('toc-rtorrent.common-module.html','rtorrent.common-module.html');"     >rtorrent.common</a><br />    <a target="moduleFrame" href="toc-rtorrent.file-module.html"
+     onclick="setFrame('toc-rtorrent.common-module.html','rtorrent.common-module.html');"     >rtorrent.common</a><br />    <a target="moduleFrame" href="toc-rtorrent.err-module.html"
+     onclick="setFrame('toc-rtorrent.err-module.html','rtorrent.err-module.html');"     >rtorrent.err</a><br />    <a target="moduleFrame" href="toc-rtorrent.file-module.html"
      onclick="setFrame('toc-rtorrent.file-module.html','rtorrent.file-module.html');"     >rtorrent.file</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib-module.html"
      onclick="setFrame('toc-rtorrent.lib-module.html','rtorrent.lib-module.html');"     >rtorrent.lib</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib.bencode-module.html"
      onclick="setFrame('toc-rtorrent.lib.bencode-module.html','rtorrent.lib.bencode-module.html');"     >rtorrent.lib.bencode</a><br />    <a target="moduleFrame" href="toc-rtorrent.lib.torrentparser-module.html"
