--- a/toc-everything.html
+++ b/toc-everything.html
@@ -26,6 +26,12 @@
      >rtorrent.torrent.Torrent</a><br />    <a target="mainFrame" href="rtorrent.tracker.Tracker-class.html"
      >rtorrent.tracker.Tracker</a><br />  <h2 class="toc">All Functions</h2>
   <div class="private">
+    <a target="mainFrame" href="rtorrent-module.html#__check_supported_methods"
+     >rtorrent.__check_supported_methods</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent-module.html#__compare_rpc_methods"
+     >rtorrent.__compare_rpc_methods</a><br />  </div>
+  <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_class_methods"
      >rtorrent._build_class_methods</a><br />  </div>
     <a target="mainFrame" href="rtorrent.common-module.html#bool_to_int"
@@ -68,6 +74,9 @@
      >rtorrent.lib.bencode.encode</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent.rpc-module.html#_build_rpc_methods"
      >rtorrent.rpc._build_rpc_methods</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent.rpc-module.html#_handle_unavailable_rpc_method"
+     >rtorrent.rpc._handle_unavailable_rpc_method</a><br />  </div>
     <a target="mainFrame" href="rtorrent.rpc-module.html#call_method"
      >rtorrent.rpc.call_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#find_method"
      >rtorrent.rpc.find_method</a><br />    <a target="mainFrame" href="rtorrent.rpc-module.html#get_varname"
@@ -82,7 +91,8 @@
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_py3"
      >rtorrent._py3</a><br />  </div>
-    <a target="mainFrame" href="rtorrent.common-module.html#__package__"
+    <a target="mainFrame" href="rtorrent-module.html#class_methods_pair"
+     >rtorrent.class_methods_pair</a><br />    <a target="mainFrame" href="rtorrent.common-module.html#__package__"
      >rtorrent.common.__package__</a><br />  <div class="private">
     <a target="mainFrame" href="rtorrent.common-module.html#_py3"
      >rtorrent.common._py3</a><br />  </div>
