--- a/toc-rtorrent-module.html
+++ b/toc-rtorrent-module.html
@@ -16,6 +16,12 @@
     <a target="mainFrame" href="rtorrent.RTorrent-class.html"
      >RTorrent</a><br />  <h2 class="toc">Functions</h2>
   <div class="private">
+    <a target="mainFrame" href="rtorrent-module.html#__check_supported_methods"
+     >__check_supported_methods</a><br />  </div>
+  <div class="private">
+    <a target="mainFrame" href="rtorrent-module.html#__compare_rpc_methods"
+     >__compare_rpc_methods</a><br />  </div>
+  <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_build_class_methods"
      >_build_class_methods</a><br />  </div>
   <h2 class="toc">Variables</h2>
@@ -28,7 +34,8 @@
   <div class="private">
     <a target="mainFrame" href="rtorrent-module.html#_py3"
      >_py3</a><br />  </div>
-    <a target="mainFrame" href="rtorrent-module.html#methods"
+    <a target="mainFrame" href="rtorrent-module.html#class_methods_pair"
+     >class_methods_pair</a><br />    <a target="mainFrame" href="rtorrent-module.html#methods"
      >methods</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
